--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -2,6 +2,8 @@
 Mixins File for Wordpress Theme FAU
 */
 
+@use "sass:math";
+
 @mixin box-shadow($shadow) {
     box-shadow: $shadow;
 }
@@ -133,14 +135,14 @@ Mixins File for Wordpress Theme FAU
 }
 
 @function px2rem($font-size, $base-font-size: $font-size-gridbase) {
-	@return $font-size / $base-font-size + rem;
+	@return math.div($font-size, $base-font-size) + rem;
 }
 
 @mixin px2rem($font-size, $base-font-size: $font-size-gridbase, $line: $font-size * 1.5) {
   // font-size: $font-size + px; // für den IE8
   // line-height: ($line) + px;
-  font-size: floor(($font-size / $base-font-size)*1000)/1000 + rem;
-  line-height: ceil(($line / $base-font-size)*1000)/1000 + rem;
+  font-size: math.div(floor(math.div($font-size, $base-font-size) * 1000), 1000) + rem;
+  line-height: math.div(ceil(math.div($line, $base-font-size) * 1000), 1000) + rem;
 }
 
 @mixin morelink() {
