--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -118,6 +118,8 @@
 		    vertical-align: text-top;
 		    .fau {
 			fill: $colorZUV;
+			--fau-logo-display-name: none;
+			
 		    }
 		} 
 	    }
