--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -5,13 +5,13 @@
 /* CSS Custom Properties
 /*-----------------------------------------------------------------------------------*/
 :root {
-  --color-primary-basis: #003366;
+  --color-primary-basis: #002F6C;
   --color-primary-heller: #8fb1ef;
   --color-primary-hellste: #dde5f0;
   --color-primary-dunkler: #24598f;
   --color-primary-dunkelste: #1f4b7a;
   --color-primary-basis-kontrast: #fff;
-  --color-zentral-basis: #003366;
+  --color-zentral-basis: #002F6C;
   --color-zentral-heller: #8fb1ef;
   --color-zentral-hellste: #dde5f0;
   --color-zentral-dunkler: #24598f;
@@ -41,7 +41,7 @@
   --color-rw-dunkler: #690013;
   --color-rw-dunkelste: #42000c;
   --color-rw-basis-kontrast: #fff;
-  --color-tf-basis: #6E7881;
+  --color-tf-basis: #4D5B65;
   --color-tf-heller: #d2d5d7;
   --color-tf-hellste: #ebecee;
   --color-tf-dunkler: #53606b;
@@ -51,8 +51,8 @@
   --color-TextLight: #797676;
   --color-Notice: #a71c18;
   --color-Alert: #c5ac94;
-  --color-ZUV: #003366;
-  --color-Default: #003366;
+  --color-ZUV: #002F6C;
+  --color-Default: #002F6C;
   --color-MainBackground: #fff;
   --color-StandardHellgrau: #e9edf2;
   --color-ContentBorders: #dfe6ec;
@@ -61,11 +61,11 @@
   --color-black: #000;
   --color-PrintMain: #000;
   /* Calculated Values */
-  --color-primary-basis-lighten15: #0059b3;
+  --color-primary-basis-lighten15: #0050b9;
   --color-MetaHomeBackground: #d4d4d4;
-  --color-MetaHover: #1f4d7a;
+  --color-MetaHover: #20497f;
   --color-MetaText: #fff;
-  --color-MetaBackgroundLight: #e9edf2;
+  --color-MetaBackgroundLight: #ecf0f4;
 }
 
 /*
