--- a/css/fau-theme-gutenberg.css
+++ b/css/fau-theme-gutenberg.css
@@ -3,6 +3,22 @@
 /*  Stylings for Gutenberg Editor
 /*----------------------------------------------------------------------------*/
 /*
+*  TODO:
+* Gradient für Hero:
+   background: rgb(255,184,28);
+   background: linear-gradient(342deg, rgba(255,184,28,1) 0%, rgba(232,119,34,1) 80%, rgba(163,107,13,1) 100%);
+ (beispiel phil)
+
+  0%: Koch hell
+  80%: Koch dunkle
+  100% Basisfarbe
+  WUkel ca 340 Grad
+
+bei ZUV: 100% = 80%
+
+
+*/
+/*
  * Modified Bootstrap v3.3.7 (http://getbootstrap.com)
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
