--- a/src/sass/structure/layout/_grid-extention.scss
+++ b/src/sass/structure/layout/_grid-extention.scss
@@ -6,9 +6,9 @@
   @include make-grid(xl);
 }
 
-@media (min-width: $screen-xxl-min) {
-  @include make-grid(xxl);
-}
+// @media (min-width: $screen-xxl-min) {
+//  @include make-grid(xxl);
+// }
 
 
 .container {
@@ -16,7 +16,7 @@
   @media (min-width: $screen-xl-min) {
     width: $container-xl;
   }
-  @media (min-width: $screen-xxl-min) {
-    width: $container-xxl;
-  }
+//  @media (min-width: $screen-xxl-min) {
+//    width: $container-xxl;
+//  }
 }
