--- a/src/sass/structure/widgets/_sidebar.scss
+++ b/src/sass/structure/widgets/_sidebar.scss
@@ -6,7 +6,7 @@
 
 /* Sidebar: Inline */
 .sidebar-inline {
-	border-top: 2px solid var(--color-primary-hellste);
+	border-top: 2px solid var(--color-primary-ci-hell);
         margin: 10px 0;
 	padding-top: 10px;
         @media (min-width: $screen-sm) {
