--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,8 +2,10 @@
 // Konstanten fuer das Design
 //-----------------------------------------------------------------------------------*/
 
-$farbfamilie: 'zuv';
+$farbfamilie: 'phil';
 // med, phil, nat, rw, tf, zuv
+$colorstyle: '2021';
+
 
 // Define fonts
 $fontStack: 'Roboto', sans-serif;
@@ -26,7 +28,9 @@ $colormap-misc: ("Text": #444,
 		 "ContentRegions": #f5f7f9,        // FAU: lighten($colorZUV, 4%);
 		 "white":   #fff,
 		 "black":   #000,
-		 "PrintMain": #000
+		 "PrintMain": #000,
+		 "KontrastHell":    #fff,
+		 "KontrastDunkel":  #333
 		 );
 
  
@@ -38,10 +42,7 @@ $colormap-zentral: ("basis": #002F6C, "heller": #8fb1ef, "hellste": #dde5f0, "du
 
 $colormap-primary: $colormap-zentral;
 
-
-// $colormap-phil: ("basis": #B65D1A, "heller": #d9c689, "hellste": #f3eedf, "dunkler": #805000, "dunkelste": #553500, "basis-kontrast": #fff);
-
-$colormap-phil: ("basis": #A36B0D, "heller": #d9c689, "hellste": #f3eedf, "dunkler": #805000, "dunkelste": #553500, "basis-kontrast": #fff);
+$colormap-phil: ("basis": #A36B0D, "heller": #d9c689, "hellste": #f3eedf, "dunkler": #805000, "dunkler-kontrast": #fff, "dunkelste": #553500, "basis-kontrast": #fff, "ci-hell": #ffb81c, "ci-hell-kontrast": #000, "ci-dunkel": #e87722, "ci-dunkel-kontrast": #000, "ci-hell2": #ffe4a8, "ci-hell2-kontrast": #333);
 $colormap-med: ("basis": #0381A2, "heller": #bfd6f5, "hellste": #eaf3fc, "dunkler": #026480, "dunkelste": #014e63, "basis-kontrast": #fff);
 $colormap-nat: ("basis": #048767, "heller": #aacfbd, "hellste": #e5efea, "dunkler": #006e53, "dunkelste": #00533f, "basis-kontrast": #fff);
 $colormap-rw: ("basis": #8d1429, "heller": #c5ac94, "hellste": #ede7de, "dunkler": #690013, "dunkelste": #42000c, "basis-kontrast": #fff);
@@ -75,7 +76,82 @@ $PalettonDunkelste:	map-get($colormap-primary, "dunkelste");
 $colormaps: ("primary": $colormap-primary, "zentral": $colormap-zentral, "phil": $colormap-phil, "med": $colormap-med, "nat": $colormap-nat, "rw": $colormap-rw, "tf": $colormap-tf);
 
 
-		 
+// Footer
+$color-footer-bg:	map-get($colormap-primary, "ci-hell");
+$color-footer-text:	map-get($colormap-primary, "ci-hell-kontrast");
+
+// Hero
+$color-hero-bg:		map-get($colormap-primary, "ci-hell");
+$color-hero-text:	map-get($colormap-primary, "ci-hell-kontrast");
+$colorPrimaryHeroLight: map-get($colormap-primary, "ci-hell");
+
+// Main Menu
+
+$color-mainmenu-toplevel-bg:	    map-get($colormap-misc, "MainBackground");
+$color-mainmenu-toplevel-text:	    map-get($colormap-misc, "Text");
+$color-mainmenu-toplevel-hover-text:	map-get($colormap-primary, "ci-hell-kontrast");
+$color-mainmenu-toplevel-hover-bg:	map-get($colormap-primary, "ci-hell");
+
+$color-mainmenu-sublevel-bg:	    map-get($colormap-primary, "ci-hell");
+$color-mainmenu-sublevel-text:	    map-get($colormap-primary, "ci-hell-kontrast");
+$color-mainmenu-sublevel-hover-text:	map-get($colormap-primary, "dunkler-kontrast");
+$color-mainmenu-sublevel-hover-bg:	map-get($colormap-primary, "dunkler");
+
+$color-mainmenu-sublevel-button-text:	map-get($colormap-primary, "dunkler-kontrast");
+$color-mainmenu-sublevel-button-bg:	map-get($colormap-primary, "dunkler");
+$color-mainmenu-sublevel-button-hover-text:	map-get($colormap-primary, "dunkler-kontrast");
+$color-mainmenu-sublevel-button-hover-bg:	map-get($colormap-primary, "dunkelste");
+
+
+
+
+// Submenu (= Subnav links)
+
+$color-submenu-toplevel-bg:	    map-get($colormap-misc, "MainBackground");
+$color-submenu-toplevel-text:	    map-get($colormap-misc, "Text");
+$color-submenu-toplevel-hover-text:	map-get($colormap-primary, "ci-hell-kontrast");
+$color-submenu-toplevel-hover-bg:	map-get($colormap-primary, "ci-hell");
+
+$color-submenu-active-bg:	    map-get($colormap-primary, "ci-hell");
+$color-submenu-active-text:	    map-get($colormap-primary, "ci-hell-kontrast");
+$color-submenu-hover-text:	map-get($colormap-primary, "dunkler-kontrast");
+$color-submenu-hover-bg:	map-get($colormap-primary, "dunkler");
+$color-submenu-currentlevel-text:	map-get($colormap-primary, "ci-hell2-kontrast");
+$color-submenu-currentlevel-bg:	    map-get($colormap-primary, "ci-hell2");
+$color-submenu-sublevel-text:	map-get($colormap-primary, "ci-hell-kontrast");
+$color-submenu-sublevel-bg:	    map-get($colormap-primary, "ci-hell");
+
+@if $colorstyle == '2015' {
+    $color-footer-bg:	map-get($colormap-primary, "basis");
+    $color-footer-text:	map-get($colormap-primary, "basis-kontrast");
+    $color-hero-bg:	map-get($colormap-primary, "basis");
+    $color-hero-text:	map-get($colormap-primary, "basis-kontrast");
+    $colorPrimaryHeroLight: lighten(map-get($colormap-primary, "basis"), 15%);  // hellere Farbe
+    
+    $color-mainmenu-toplevel-text: map-get($colormap-primary, "basis");
+    $color-mainmenu-toplevel-hover-text: #fff;
+    $color-mainmenu-toplevel-hover-bg: map-get($colormap-primary, "basis");
+    
+    $color-mainmenu-sublevel-bg: map-get($colormap-primary, "basis");
+    
+    $color-mainmenu-sublevel-button-text: map-get($colormap-primary, "basis-kontrast");
+    $color-mainmenu-sublevel-button-bg: map-get($colormap-primary, "dunkelste");
+    $color-mainmenu-sublevel-button-hover-text: $color-mainmenu-sublevel-button-text;
+    $color-mainmenu-sublevel-button-hover-bg: map-get($colormap-primary, "dunkler");
+    
+    
+    $color-submenu-hover-text:  map-get($colormap-primary, "basis-kontrast");
+    $color-submenu-hover-bg: map-get($colormap-primary, "dunkler");
+    $color-submenu-currentlevel-text: map-get($colormap-primary, "dunkelste");
+    $color-submenu-currentlevel-bg: map-get($colormap-primary, "hellste");
+    $color-submenu-active-bg:	    map-get($colormap-primary, "dunkler"); 
+    $color-submenu-active-text:	    #fff;
+    
+}
+
+
+
+
 $colorNotice:		map-get($colormap-misc, "Notice"); 	
 $colorZUV:		map-get($colormap-misc, "ZUV"); 
 $colorDefault:		map-get($colormap-misc, "Default"); 
@@ -87,31 +163,15 @@ $colorShadows:	rgba(135,132,135,1);
 // Color for shadows
 
 // Hinweis: Für SVG-Grafiken brauchen wir den HEX-Code direkt und können nicht Custom Properies nutzen!
-$socialmedia_icon_bgcolor_hover: $colorPrimaryContrast;
-$socialmedia_icon_color: $colorPrimaryContrast;
-$socialmedia_icon_color_hover: $colorPrimary;
+$socialmedia_icon_bgcolor_hover: map-get($colormap-primary, "ci-hell-kontrast");
+$socialmedia_icon_color:	map-get($colormap-primary, "ci-hell-kontrast");
+$socialmedia_icon_color_hover:	map-get($colormap-primary, "ci-hell");
 
-
-$colorPrimaryHeroLight: lighten($colorPrimary, 15%);  // hellere Farbe
-
-/*
-*  TODO:
-* Gradient für Hero:
-   background: rgb(255,184,28);
-   background: linear-gradient(342deg, rgba(255,184,28,1) 0%, rgba(232,119,34,1) 80%, rgba(163,107,13,1) 100%);
- (beispiel phil)
-
-  0%: Koch hell
-  80%: Koch dunkle
-  100% Basisfarbe
-  WUkel ca 340 Grad
-
-bei ZUV: 100% = 80%
-
-
-*/
-
-
+@if $colorstyle == '2015' {
+    $socialmedia_icon_bgcolor_hover: $colorPrimaryContrast;
+    $socialmedia_icon_color: $colorPrimaryContrast;
+    $socialmedia_icon_color_hover: $colorPrimary;
+}
 
 
 $colorOverlayLight: rgba(255, 255, 255, 0.15);
@@ -134,10 +194,10 @@ $colorCopyrightBackground: rgba(0, 0, 0, 0.6);
 
 
 // Font sizes
-$font-size-rembase: 93.75%;
+$font-size-rembase: 100%; // 93.75%;
 $font-size-rembase-mobile: 100%;
-$font-size-gridbase: 15;
-$font-size-base: 15;
+$font-size-gridbase: 16;
+$font-size-base: 16;
 
 $font-size-meta: ($font-size-base - 2);
 $font-size-sidebar: ($font-size-base - 2);
@@ -286,8 +346,8 @@ $screen-md-min:              $screen-md;
 $screen-lg:                  1200px;
 $screen-lg-min:              $screen-lg;
 
-$screen-xl: 1760px;
-$screen-xxl: 3200px;
+$screen-xl: 1400px;
+$screen-xxl: 1760px;
 $screen-xxs: 320px;
 
 $slider-maxwidth: 1260px;
@@ -307,8 +367,8 @@ $screen-xxl-min: $screen-xxl;
 
 $container-lg: 1024px;
 // $container-lg: 970px;
-$container-xl: 1100px;
-$container-xxl: 1100px;
+$container-xl: 1400px;
+$container-xxl: 1760px;
 
 // max width of the homepage hero image, used by the plugin "ILI FAU Templates"
 $max-width-hero: 1920px;
