--- a/src/sass/elements/_quotes.scss
+++ b/src/sass/elements/_quotes.scss
@@ -11,6 +11,7 @@ blockquote {
 	font-style: italic;
 	position: relative;
 	
+	
 	@include px2rem($font-size-quotes);
 	
 	
@@ -32,16 +33,21 @@ blockquote {
 	#content & {
 		font-style: italic;
 		margin: 10px;
-		padding-left: 50px;
+		padding: 20px;
 		min-height: 50px;
-
+		border-left: 10px solid var(--color-primary-ci-hell);
+		
+		background: var(--color-ContentRegions);
+		display: inline-block;
+		
+		
 		@media (min-width: $screen-sm) {
 		    margin: 10px 50px;
-		    padding-left: 65px;
+		    padding: 20px 40px;
 		}
 		
-		p {
-		    color: var(--color-primary-basis);
+		p,h1,h2,h3,h4,h5,h6 {
+		    color: var(--color-Text);
 		}
 		
 		
@@ -49,15 +55,19 @@ blockquote {
 
 	#content .sidebar-inline & {
 	    margin: 10px;
+	    padding: 10px;
 	}
 	small,
 	cite { 
 	    display: block; 
 	    text-align: right;
 	    @include px2rem($font-size-quotes-cites);
-	    color: var(--color-TextLight);
+	    color: var(--color-Text);
 	    &:before { content: '\2014 \00A0'; }
 
+	}
+	cite {
+	    margin-top: 10px;
 	}
 	#content & img {
 	    box-shadow: none;
@@ -66,51 +76,11 @@ blockquote {
 	
 	&.pull-right {
 	    border-right: none;
-	    padding-right: 50px;
-	    &::before {
-		content: "";
-	    }
-	    &::after {
-		content: "\201C"; // Unicode for Left Double Quote
-		font-family: Georgia, serif;
-		font-size: 70px;
-		font-weight: bold;
-		color: var(--color-TextLight);
-
-		position: absolute;
-		right: 10px;
-		top: 10px;
-	    }
+	    padding-right: 40px;
+	    padding-left: 15px;
 	    
 	}
 	
-	
-	&::before {
-            content: "\201C"; // Unicode for Left Double Quote
-            font-family: Georgia, serif;
-            font-size: 70px;
-            font-weight: bold;
-            color: var(--color-TextLight);
-
-            position: absolute;
-            left: 10px;
-            top: 10px;
-	    
-	    
-        }
-	#content &::before {
-	    color: var(--color-primary-basis);
-	    left: 0px;
-	    
-	    @media (min-width: $screen-sm) {
-		left: 10px;
-	    }
-	}
-	
-        &::after{
-            // Reset to make sure
-            content: "";
-        }
 	
 	#content .sidebar-inline &,
 	#tinymce  &.noquote,
@@ -118,6 +88,7 @@ blockquote {
 		    background: inherit;
 		    padding-left: 0;
 		    padding-right: 0;
+		    border: none;
 		    &::after, 
 		    &::before {
 			content: "";
@@ -137,7 +108,7 @@ blockquote {
 
 
 cite {
-    color: var(--color-primary-heller); 
+    color: var(--color-primary-dunkler); 
     font-weight: normal;
     font-style: normal;
     
