--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -66,9 +66,9 @@ button.expand-all {
             overflow: hidden;
 
             .accordion-toggle {
-                border-left: 10px solid var(--color-primary-basis);
+                border-left: 10px solid var(--color-primary-ci-hell);
                 background: var(--color-ContentBorders);
-                color:  var(--color-Default);
+                color:  var(--color-Text);
                 @include border-radius(4px);
 		@include px2rem($font-size-content-toggle);
                 text-decoration: none;
@@ -85,14 +85,14 @@ button.expand-all {
 
                 &:hover,
                     &:focus {
-                    background-color: darken($PalettonHellste, 3%);
+                    background-color: var(--color-primary-hellste);
                     text-decoration: none;
                 }
 
                 &.active,
                 &.active:hover,
                     &.active:focus {
-                    background-color: darken($PalettonHellste, 3%);
+                    background-color: var(--color-primary-hellste);
                     color: var(--color-primary-dunkelste); // $colorPrimary;
 
                     &:before {
@@ -158,7 +158,7 @@ button.expand-all {
             right: inherit;
             top: inherit;
         }
-        border: 1px solid var(--color-primary-hellste);;
+        border: 1px solid var(--color-primary-ci-hell);
         margin: 30px 20px;
         height: inherit;
     }
@@ -180,7 +180,7 @@ button.expand-all {
     margin: 10px 0 20px 0;
 
     header {
-        border-left: 10px solid $colorPrimary;
+        border-left: 10px solid var(--color-primary-ci-hell);
         background: var(--color-ContentBorders);
         color:  var(--color-Default);
         @include border-radius(4px);
