--- a/src/sass/structure/hero/_breadcrumb.scss
+++ b/src/sass/structure/hero/_breadcrumb.scss
@@ -4,7 +4,12 @@
 
 #hero {
     &.hero-small {
-	@include radial-gradient(var(--color-primary-basis), var(--color-primary-basis-lighten15));
+	    @if $colorstyle == '2021' {
+		background: var(--color-hero-bg);		
+            } @else {
+		@include radial-gradient(var(--color-hero-bg), var(--color-primary-basis-lighten15));
+	    }
+	
         overflow:hidden;
 	
 	p.presentationtitle,
@@ -35,7 +40,7 @@
 
 
 .breadcrumbs {
-	color: var(--color-primary-basis-kontrast);
+	color: var(--color-hero-text);
 	padding: 10px 0;
 	position: relative;
 	z-index: 10;
@@ -58,7 +63,7 @@ h3.breadcrumb_sitetitle {
 	font-weight: normal;
 	line-height: 18px;
 	margin-bottom: -5px;
-	color: var(--color-primary-basis-kontrast);
+	color: var(--color-hero-text);
 }
 	
 	
