--- a/src/sass/structure/hero/_herobase.scss
+++ b/src/sass/structure/hero/_herobase.scss
@@ -15,13 +15,17 @@
 	margin: 20px auto;
     }
 
-    @include placeholder(var(--color-primary-basis-kontrast));	
-    @include radial-gradient(var(--color-primary-basis), var(--color-primary-basis-lighten15));
+    @include placeholder(var(--color-hero-text));	
+    @if $colorstyle == '2021' {
+		background: var(--color-hero-bg);		
+    } @else {
+		@include radial-gradient(var(--color-hero-bg), var(--color-primary-basis-lighten15));
+    }
 
 	
 	h1, h2, h3, h4, p {
 		font-weight: normal;
-		color: var(--color-primary-basis-kontrast);
+		color: var(--color-hero-text);
 		
 	}
 	h1 {
@@ -33,7 +37,7 @@
 	
 	
 	a {
-		color: var(--color-primary-basis-kontrast);
+		color: var(--color-hero-text);
 	}
 	
 	
