--- a/src/sass/structure/navigation/_navigation.scss
+++ b/src/sass/structure/navigation/_navigation.scss
@@ -3,9 +3,11 @@
 /*             But not: Breadcrumb, Social media icons, hero, gallerys and styling elements 
 /*-----------------------------------------------------------------------------------*/
 
-// Hauptmenu
+// Allgemein Nav
 @import "menu";
 
+// Hauptmenu
+@import "mainmenu";
 
 // Meta menu leiste
 @import "clonednav";
